--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #181a1b;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #181a1b !important;
+  color: #ffffff !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.dark-mode {
+  background-color: #181a1b;
+  color: #ffffff;
+}
+
+.dark-mode .navbar {
+  background-color: #333;
+}
+
+.dark-mode .card {
+  background-color: #424242;
+  border-color: #616161;
+}
+
+.dark-modal .modal-content {
+  background-color: #2b2b2b; /* Dark background for the modal */
+  color: #fff; /* Light text color for readability */
+}
+
+.dark-modal .modal-header, .dark-modal .modal-body {
+  border-color: #444; /* Darker borders within the modal */
 }
